project(scaleform LANGUAGES CXX)

add_library(scaleform STATIC
				"${CMAKE_CURRENT_SOURCE_DIR}/Include/GFx.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Include/GFxCompat.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Include/GFxConfig.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Include/GFxConfigAddons.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Include/GFxVersion.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Include/GFx_AMP.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Include/GFx_FontProvider_FT2.h"
				#"${CMAKE_CURRENT_SOURCE_DIR}/Include/GFx_FontProvider_NGP.h"
				#"${CMAKE_CURRENT_SOURCE_DIR}/Include/GFx_FontProvider_PS3.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Include/GFx_FontProvider_Win32.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Include/GFx_Kernel.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Include/GFx_Render.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Include/GFx_Renderer_D3D1x.h"
				#"${CMAKE_CURRENT_SOURCE_DIR}/Include/GFx_Renderer_D3D9.h"
				#"${CMAKE_CURRENT_SOURCE_DIR}/Include/GFx_Renderer_GL.h"
				#"${CMAKE_CURRENT_SOURCE_DIR}/Include/GFx_Renderer_PS3.h"
				#"${CMAKE_CURRENT_SOURCE_DIR}/Include/GFx_Renderer_X360.h"
				#"${CMAKE_CURRENT_SOURCE_DIR}/Include/GFx_Sound_FMOD.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Include/GFx_Sound_WWise.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Include/GFx_XML.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/GFx/GFx_AS2Support.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/GFx/GFx_AS3Support.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/GFx/GFx_ASIMEManager.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/GFx/GFx_ASMovieRootBase.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/GFx/GFx_ASSoundIntf.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/GFx/GFx_ASString.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/GFx/GFx_ASUtils.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/GFx/GFx_Audio.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/GFx/GFx_Button.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/GFx/GFx_ButtonDef.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/GFx/GFx_CharacterDef.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/GFx/GFx_CharPosInfo.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/GFx/GFx_DisplayList.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/GFx/GFx_DisplayObjContainer.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/GFx/GFx_DisplayObject.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/GFx/GFx_DrawingContext.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/GFx/GFx_DrawText.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/GFx/GFx_Event.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/GFx/GFx_FilterDesc.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/GFx/GFx_FontCompactor.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/GFx/GFx_FontLib.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/GFx/GFx_FontManager.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/GFx/GFx_FontProviderHUD.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/GFx/GFx_FontProviderWin32.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/GFx/GFx_FontResource.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/GFx/GFx_ImageCreator.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/GFx/GFx_ImageResource.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/GFx/GFx_ImageSupport.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/GFx/GFx_Input.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/GFx/GFx_InteractiveObject.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/GFx/GFx_Loader.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/GFx/GFx_LoaderImpl.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/GFx/GFx_Log.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/GFx/GFx_MediaInterfaces.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/GFx/GFx_MovieDef.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/GFx/GFx_Player.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/GFx/GFx_PlayerImpl.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/GFx/GFx_PlayerStats.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/GFx/GFx_PlayerTasks.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/GFx/GFx_Resource.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/GFx/GFx_ResourceHandle.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/GFx/GFx_Shape.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/GFx/GFx_ShapeSwf.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/GFx/GFx_SharedObject.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/GFx/GFx_Sprite.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/GFx/GFx_SpriteDef.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/GFx/GFx_Stats.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/GFx/GFx_StatsDecl.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/GFx/GFx_Stream.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/GFx/GFx_StreamContext.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/GFx/GFx_String.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/GFx/GFx_StringHash.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/GFx/GFx_TagLoaders.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/GFx/GFx_Tags.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/GFx/GFx_TaskManager.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/GFx/GFx_TextField.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/GFx/GFx_TextFieldDef.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/GFx/GFx_Types.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/GFx/GFx_VideoBase.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/GFx/GFx_WWHelper.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/GFx/AMP/Amp_Interfaces.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/GFx/AMP/Amp_Message.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/GFx/AMP/Amp_ProfileFrame.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/GFx/AMP/Amp_Server.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/GFx/AMP/Amp_ViewStats.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/GFx/AS2/AS2_Action.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/GFx/AS2/AS2_ActionTypes.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/GFx/AS2/AS2_AvmCharacter.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/GFx/AS2/AS2_AvmSprite.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/GFx/AS2/AS2_FunctionRef.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/GFx/AS2/AS2_FunctionRefImpl.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/GFx/AS2/AS2_LoadVars.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/GFx/AS2/AS2_MovieClipLoader.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/GFx/AS2/AS2_MovieRoot.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/GFx/AS2/AS2_Object.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/GFx/AS2/AS2_ObjectProto.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/GFx/AS2/AS2_RefCountCollector.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/GFx/AS2/AS2_StringManager.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/GFx/AS2/AS2_StyleSheet.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/GFx/AS2/AS2_Value.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/GFx/AS2/IME/AS2_IMEManager.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/GFx/AS2/IME/GASIme.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/GFx/AS3/AS3_Global.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/GFx/AS3/AS3_StringManager.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/GFx/AS3/AS3_Value.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/GFx/AS3/Abc/AS3_Abc_Type.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/GFx/AS3/IME/AS3_IMEManager.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/GFx/Audio/GFx_Sound.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/GFx/Audio/GFx_SoundResource.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/GFx/IME/GFx_IMEManager.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/GFx/Text/Text_EditorKit.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/GFx/Text/Text_StyleSheet.h"
				#"${CMAKE_CURRENT_SOURCE_DIR}/Src/GFx/XML/XML_Document.h"
				#"${CMAKE_CURRENT_SOURCE_DIR}/Src/GFx/XML/XML_DOM.h"
				#"${CMAKE_CURRENT_SOURCE_DIR}/Src/GFx/XML/XML_Object.h"
				#"${CMAKE_CURRENT_SOURCE_DIR}/Src/GFx/XML/XML_Parser.h"
				#"${CMAKE_CURRENT_SOURCE_DIR}/Src/GFx/XML/XML_Support.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Kernel/SF_Alg.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Kernel/SF_AllocAddr.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Kernel/SF_Allocator.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Kernel/SF_AllocInfo.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Kernel/SF_AmpInterface.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Kernel/SF_Array.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Kernel/SF_ArrayPaged.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Kernel/SF_ArrayStaticBuff.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Kernel/SF_ArrayUnsafe.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Kernel/SF_Atomic.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Kernel/SF_AutoPtr.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Kernel/SF_BitSet.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Kernel/SF_Debug.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Kernel/SF_File.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Kernel/SF_Hash.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Kernel/SF_HeapNew.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Kernel/SF_KeyCodes.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Kernel/SF_List.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Kernel/SF_ListAlloc.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Kernel/SF_Locale.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Kernel/SF_Log.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Kernel/SF_Math.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Kernel/SF_MemItem.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Kernel/SF_Memory.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Kernel/SF_MemoryHeap.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Kernel/SF_MsgFormat.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Kernel/SF_RadixTree.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Kernel/SF_Random.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Kernel/SF_Range.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Kernel/SF_RefCount.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Kernel/SF_SIMD.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Kernel/SF_SIMD_SSE.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Kernel/SF_StackMemPool.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Kernel/SF_Stats.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Kernel/SF_Std.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Kernel/SF_String.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Kernel/SF_StringHash.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Kernel/SF_SysAlloc.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Kernel/SF_SysFile.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Kernel/SF_System.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Kernel/SF_Threads.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Kernel/SF_Timer.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Kernel/SF_Types.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Kernel/SF_UTF8Util.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Kernel/SF_WString.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Kernel/HeapMH/HeapMH_MemoryHeap.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Kernel/HeapMH/HeapMH_SysAllocMalloc.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Kernel/HeapPT/HeapPT_MemoryHeap.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Kernel/HeapPT/HeapPT_SysAllocMalloc.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Kernel/HeapPT/HeapPT_SysAllocWinAPI.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Platform/Platform.cpp"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Platform/Platform.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Platform/Platform_CommandLine.cpp"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Platform/Platform_CommandLine.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Platform/Platform_CoreTest.cpp"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Platform/Platform_CoreTest.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Platform/Platform_D3D1x.cpp"
				#"${CMAKE_CURRENT_SOURCE_DIR}/Src/Platform/Platform_D3D9.cpp"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Platform/Platform_RenderHALThread.cpp"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Platform/Platform_RenderHALThread.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Platform/Platform_RenderThread.cpp"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Platform/Platform_RenderThread.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Platform/Platform_RTCommandQueue.cpp"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Platform/Platform_RTCommandQueue.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Platform/Platform_SystemCursorManager.cpp"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Platform/Platform_SystemCursorManager.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Platform/Platform_WinAPI.cpp"
				#"${CMAKE_CURRENT_SOURCE_DIR}/Src/Platform/Platform_WinAPI_GL.cpp"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Platform/Platform_XInput.cpp"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Platform/Platform_XInput.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Render/Renderer2D.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Render/Renderer2DImpl.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Render/Render_Buffer.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Render/Render_BufferGeneric.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Render/Render_Bundle.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Render/Render_CacheEffect.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Render/Render_Color.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Render/Render_Constants.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Render/Render_Containers.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Render/Render_Context.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Render/Render_CxForm.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Render/Render_FilterParams.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Render/Render_Filters.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Render/Render_FiltersLE.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Render/Render_Font.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Render/Render_GlyphCache.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Render/Render_GlyphCacheConfig.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Render/Render_GlyphFitter.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Render/Render_GlyphParam.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Render/Render_GlyphQueue.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Render/Render_Gradients.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Render/Render_Hairliner.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Render/Render_HAL.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Render/Render_Image.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Render/Render_ImageFiles.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Render/Render_Math2D.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Render/Render_Matrix2x4.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Render/Render_Matrix3x4.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Render/Render_Matrix4x4.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Render/Render_MatrixPool.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Render/Render_MemoryManager.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Render/Render_MeshCache.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Render/Render_MeshCacheConfig.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Render/Render_MeshKey.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Render/Render_PathDataPacker.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Render/Render_Point3.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Render/Render_Primitive.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Render/Render_PrimitiveBundle.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Render/Render_PrimitiveProcessor.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Render/Render_Queue.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Render/Render_Rasterizer.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Render/Render_ResizeImage.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Render/Render_Scale9Grid.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Render/Render_ScreenToWorld.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Render/Render_Shader.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Render/Render_ShapeDataDefs.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Render/Render_ShapeDataFloat.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Render/Render_ShapeDataFloatMP.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Render/Render_ShapeDataPacked.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Render/Render_ShapeMeshProvider.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Render/Render_SimpleMeshCache.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Render/Render_StateBag.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Render/Render_States.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Render/Render_Stats.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Render/Render_Stroker.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Render/Render_StrokerAA.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Render/Render_Sync.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Render/Render_TessDefs.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Render/Render_Tessellator.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Render/Render_TessGen.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Render/Render_TextLayout.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Render/Render_TextMeshProvider.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Render/Render_TextureUtil.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Render/Render_ThreadCommandQueue.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Render/Render_ToleranceParams.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Render/Render_TreeCacheNode.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Render/Render_TreeLog.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Render/Render_TreeNode.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Render/Render_TreeShape.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Render/Render_TreeText.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Render/Render_Twips.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Render/Render_Types2D.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Render/Render_Vertex.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Render/Render_Viewport.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Render/D3D1x/D3D1x_Config.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Render/D3D1x/D3D1x_HAL.cpp"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Render/D3D1x/D3D1x_HAL.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Render/D3D1x/D3D1x_HALSetup.cpp"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Render/D3D1x/D3D1x_MeshCache.cpp"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Render/D3D1x/D3D1x_MeshCache.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Render/D3D1x/D3D1x_Shader.cpp"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Render/D3D1x/D3D1x_Shader.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Render/D3D1x/D3D1x_ShaderManager.cpp"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Render/D3D1x/D3D1x_ShaderManager.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Render/D3D1x/D3D1x_Shaders.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Render/D3D1x/D3D1x_Texture.cpp"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Render/D3D1x/D3D1x_Texture.h"
				#"${CMAKE_CURRENT_SOURCE_DIR}/Src/Render/D3D9/D3D9_BinaryShaders.cpp"
				#"${CMAKE_CURRENT_SOURCE_DIR}/Src/Render/D3D9/D3D9_HAL.cpp"
				#"${CMAKE_CURRENT_SOURCE_DIR}/Src/Render/D3D9/D3D9_HAL.h"
				#"${CMAKE_CURRENT_SOURCE_DIR}/Src/Render/D3D9/D3D9_HALSetup.cpp"
				#"${CMAKE_CURRENT_SOURCE_DIR}/Src/Render/D3D9/D3D9_MeshCache.cpp"
				#"${CMAKE_CURRENT_SOURCE_DIR}/Src/Render/D3D9/D3D9_MeshCache.h"
				#"${CMAKE_CURRENT_SOURCE_DIR}/Src/Render/D3D9/D3D9_Shader.cpp"
				#"${CMAKE_CURRENT_SOURCE_DIR}/Src/Render/D3D9/D3D9_Shader.h"
				#"${CMAKE_CURRENT_SOURCE_DIR}/Src/Render/D3D9/D3D9_ShaderManager.cpp"
				#"${CMAKE_CURRENT_SOURCE_DIR}/Src/Render/D3D9/D3D9_ShaderManager.h"
				#"${CMAKE_CURRENT_SOURCE_DIR}/Src/Render/D3D9/D3D9_Shaders.cpp"
				#"${CMAKE_CURRENT_SOURCE_DIR}/Src/Render/D3D9/D3D9_Shaders.h"
				#"${CMAKE_CURRENT_SOURCE_DIR}/Src/Render/D3D9/D3D9_Texture.cpp"
				#"${CMAKE_CURRENT_SOURCE_DIR}/Src/Render/D3D9/D3D9_Texture.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Render/FontProvider/Render_FontProviderFT2.cpp"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Render/FontProvider/Render_FontProviderFT2.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Render/FontProvider/Render_FontProviderHUD.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Render/FontProvider/Render_FontProviderWinAPI.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Render/FontProvider/Render_FT2Helper.cpp"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Render/FontProvider/Render_FT2Helper.h"
				#"${CMAKE_CURRENT_SOURCE_DIR}/Src/Render/GL/GLES_ExtensionMacros.h"
				#"${CMAKE_CURRENT_SOURCE_DIR}/Src/Render/GL/GLES_Extensions.cpp"
				#"${CMAKE_CURRENT_SOURCE_DIR}/Src/Render/GL/GLES_Extensions.h"
				#"${CMAKE_CURRENT_SOURCE_DIR}/Src/Render/GL/GLES_Shaders.cpp"
				#"${CMAKE_CURRENT_SOURCE_DIR}/Src/Render/GL/GLES_Shaders.h"
				#"${CMAKE_CURRENT_SOURCE_DIR}/Src/Render/GL/GL_Common.h"
				#"${CMAKE_CURRENT_SOURCE_DIR}/Src/Render/GL/GL_ExtensionMacros.h"
				#"${CMAKE_CURRENT_SOURCE_DIR}/Src/Render/GL/GL_Extensions.cpp"
				#"${CMAKE_CURRENT_SOURCE_DIR}/Src/Render/GL/GL_Extensions.h"
				#"${CMAKE_CURRENT_SOURCE_DIR}/Src/Render/GL/GL_HAL.cpp"
				#"${CMAKE_CURRENT_SOURCE_DIR}/Src/Render/GL/GL_HAL.h"
				#"${CMAKE_CURRENT_SOURCE_DIR}/Src/Render/GL/GL_HALSetup.cpp"
				#"${CMAKE_CURRENT_SOURCE_DIR}/Src/Render/GL/GL_MeshCache.cpp"
				#"${CMAKE_CURRENT_SOURCE_DIR}/Src/Render/GL/GL_MeshCache.h"
				#"${CMAKE_CURRENT_SOURCE_DIR}/Src/Render/GL/GL_Shader.cpp"
				#"${CMAKE_CURRENT_SOURCE_DIR}/Src/Render/GL/GL_Shader.h"
				#"${CMAKE_CURRENT_SOURCE_DIR}/Src/Render/GL/GL_Shaders.cpp"
				#"${CMAKE_CURRENT_SOURCE_DIR}/Src/Render/GL/GL_Shaders.h"
				#"${CMAKE_CURRENT_SOURCE_DIR}/Src/Render/GL/GL_Texture.cpp"
				#"${CMAKE_CURRENT_SOURCE_DIR}/Src/Render/GL/GL_Texture.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Render/ImageFiles/DDS_ImageFile.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Render/ImageFiles/DDS_ImageReader.cpp"
				#"${CMAKE_CURRENT_SOURCE_DIR}/Src/Render/ImageFiles/GXT_ImageFile.h"
				#"${CMAKE_CURRENT_SOURCE_DIR}/Src/Render/ImageFiles/GXT_ImageReader.cpp"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Render/ImageFiles/JPEG_ImageCommon.cpp"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Render/ImageFiles/JPEG_ImageCommon.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Render/ImageFiles/JPEG_ImageFile.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Render/ImageFiles/JPEG_ImageReader.cpp"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Render/ImageFiles/JPEG_ImageWriter.cpp"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Render/ImageFiles/PNG_ImageFile.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Render/ImageFiles/PNG_ImageReader.cpp"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Render/ImageFiles/PVR_ImageFile.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Render/ImageFiles/PVR_ImageReader.cpp"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Render/ImageFiles/Render_ImageFile.cpp"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Render/ImageFiles/Render_ImageFile.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Render/ImageFiles/Render_ImageFileUtil.cpp"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Render/ImageFiles/Render_ImageFileUtil.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Render/ImageFiles/TGA_ImageFile.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Render/ImageFiles/TGA_ImageReader.cpp"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Render/ImageFiles/TGA_ImageWriter.cpp"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Render/Text/Text_Core.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Render/Text/Text_DocView.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Render/Text/Text_FilterDesc.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Render/Text/Text_FontManager.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Render/Text/Text_Highlight.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Render/Text/Text_LineBuffer.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Render/Text/Text_SGMLParser.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Render/Text/Text_StyledText.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Render/Text/Text_WWHelper.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Sound/Sound_Sound.cpp"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Sound/Sound_Sound.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Sound/Sound_SoundEvent.h"
				#"${CMAKE_CURRENT_SOURCE_DIR}/Src/Sound/Sound_SoundEventFMOD.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Sound/Sound_SoundEventWwise.h"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Sound/Sound_SoundRenderer.cpp"
				"${CMAKE_CURRENT_SOURCE_DIR}/Src/Sound/Sound_SoundRenderer.h"
				#"${CMAKE_CURRENT_SOURCE_DIR}/Src/Sound/Sound_SoundRendererFMOD.cpp"
				#"${CMAKE_CURRENT_SOURCE_DIR}/Src/Sound/Sound_SoundRendererFMOD.h"
				#"${CMAKE_CURRENT_SOURCE_DIR}/Src/XML/XML_Expat.cpp"
				#"${CMAKE_CURRENT_SOURCE_DIR}/Src/XML/XML_Expat.h"
)

target_include_directories(scaleform PRIVATE
	${THIRDPARTY_DIR_INCLUDE_PATH}/zlib
	${THIRDPARTY_DIR_INCLUDE_PATH}/freeimage/LibPNG
	${THIRDPARTY_DIR_INCLUDE_PATH}/freeimage/LibJPEG
	${THIRDPARTY_DIR_INCLUDE_PATH}/scaleform/Src
	${THIRDPARTY_DIR_INCLUDE_PATH}/scaleform/Include
	${THIRDPARTY_DIR_INCLUDE_PATH}/freetype/include
	${DXSDK_DIR_PATH}/Include
)

target_link_libraries(scaleform PUBLIC
	LibJPEG
	libgfx.lib
	libgfx_air.lib
	libgfx_as2.lib
	libgfx_as3.lib
	libgfxexpat.lib
	libgfxplatform_d3d11.lib
	libgfxrender_d3d11.lib
	libgfxsound_fmod.lib
)

if(x64)
target_link_directories(scaleform PUBLIC
	${THIRDPARTY_DIR_INCLUDE_PATH}/scaleform/Lib/x64/Msvc90/Debug
	${DXSDK_DIR_PATH}/Lib/x64
)
else()
target_link_directories(scaleform PUBLIC
	${THIRDPARTY_DIR_INCLUDE_PATH}/scaleform/Lib/Win32/Msvc90/Debug
	${DXSDK_DIR_PATH}/Lib/x86
)
endif()

set_target_properties(scaleform PROPERTIES FOLDER "engine")